// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourtCalendarFiltersComponent should create the component and initialize inputs 1`] = `
<court-calendar-filters
  courtType={[Function String]}
  courtroomOptions={[Function Array]}
  errors={[Function OutputEmitterRef]}
  hasCrownCourt="false"
  initialValues={[Function Function]}
  jurisdictionTypeChange={[Function OutputEmitterRef]}
  organisationUnits={[Function Function]}
  submitForm={[Function OutputEmitterRef]}
>
  <div
    class="govuk-!-margin-bottom-8"
    pdk-margin-bottom="8"
  >
    <form
      class="ng-untouched ng-pristine ng-valid"
      data-test-id="searchForm"
      novalidate=""
      pdk-form=""
    >
      <fieldset
        class="filter-container"
      >
        <legend
          class="govuk-!-padding-top-4 govuk-heading-s"
          pdk-padding-top="4"
          pdk-typography="heading-small"
        >
          <h2
            class="govuk-heading-m"
            pdk-typography="heading-medium"
          >
            Filter hearings
          </h2>
        </legend>
        <pdk-form-field
          class="govuk-grid-column-full"
          label="jurisdiction"
          labeltype="none"
        >
          <pdk-form-group
            class="pdk-form-group"
          >
            <fieldset
              class="govuk-fieldset"
              pdk-fieldset=""
            >
              <legend
                class="govuk-fieldset__legend govuk-visually-hidden"
              >
                 jurisdiction 
              </legend>
              <pdk-radio-group
                class="ng-untouched ng-pristine ng-valid"
                name="courtType"
                required=""
              >
                <div
                  class="govuk-radios"
                >
                  <pdk-radio-button
                    value="MAGISTRATES"
                  >
                    <div
                      class="govuk-radios__item"
                    >
                      <input
                        class="govuk-radios__input"
                        id="pdk-radio-GENERATED_ID"
                        name="pdk-radio-group-GENERATED_ID"
                        type="radio"
                        value="MAGISTRATES"
                      />
                      <label
                        class="govuk-radios__label govuk-label"
                        for="pdk-radio-GENERATED_ID"
                        pdk-label=""
                      >
                        Magistrates' Court 
                      </label>
                    </div>
                  </pdk-radio-button>
                  <pdk-grid>
                    <pdk-radio-conditional
                      class="govuk-!-padding-top-4"
                      pdk-padding-top="4"
                    >
                      <div
                        class="govuk-radios__conditional"
                      >
                        <court-calendar-filter-fields>
                          <div
                            class="filter-group filter-group-extended"
                          >
                            <div
                              class="filter-item"
                            >
                              <pdk-form-field
                                label="Court"
                                labeltype="small"
                              >
                                <pdk-form-group
                                  class="pdk-form-group"
                                >
                                  <label
                                    class="govuk-label govuk-label--s"
                                    for="courtCentreFilter"
                                  >
                                     Court 
                                  </label>
                                  <cpp-organisation-unit-autosuggest
                                    class="ng-untouched ng-pristine ng-valid"
                                    data-role="allocate-court-centre-input"
                                    name="courtCentre"
                                    required=""
                                  >
                                    <pdk-autosuggest-lite>
                                      <pdk-autosuggest
                                        highlightcolor="blue"
                                      >
                                        <pdk-interaction-container>
                                          <div>
                                            <div
                                              class="pdk-autosuggest"
                                            >
                                              <input
                                                aria-autocomplete="list"
                                                aria-controls="pdk-autosuggest__suggestions-container-GENERATED_ID-listbox"
                                                aria-describedby="pdk-autosuggest__instructions-GENERATED_ID"
                                                aria-expanded="false"
                                                autocomplete="off"
                                                class="pdk-autosuggest__input ng-untouched ng-pristine ng-valid govuk-input"
                                                id="courtCentreFilter"
                                                role="combobox"
                                                type="text"
                                              />
                                              <span
                                                class="govuk-visually-hidden"
                                                id="pdk-autosuggest__instructions-GENERATED_ID"
                                                pdk-visually-hidden=""
                                              >
                                                 When autocomplete results are available, use the up and down arrows to review and Enter to select. Touch device users, explore options with swipe gestures. 
                                              </span>
                                              <span
                                                aria-live="polite"
                                                class="govuk-visually-hidden"
                                                pdk-visually-hidden=""
                                                role="status"
                                              >
                                              </span>
                                              <div
                                                class="pdk-autosuggest__suggestions-container"
                                                id="pdk-autosuggest__suggestions-container-GENERATED_ID"
                                              >
                                              </div>
                                            </div>
                                          </div>
                                        </pdk-interaction-container>
                                      </pdk-autosuggest>
                                    </pdk-autosuggest-lite>
                                  </cpp-organisation-unit-autosuggest>
                                </pdk-form-group>
                              </pdk-form-field>
                            </div>
                            <div
                              class="filter-item"
                            >
                              <pdk-form-field
                                label="Courtroom (optional)"
                                labeltype="small"
                              >
                                <pdk-form-group
                                  class="pdk-form-group"
                                >
                                  <label
                                    class="govuk-label govuk-label--s"
                                    for="pdk-select-GENERATED_ID"
                                  >
                                     Courtroom (optional) 
                                  </label>
                                  <pdk-select
                                    class="ng-untouched ng-pristine ng-valid"
                                    justified=""
                                    placeholder="Any"
                                  >
                                    <select
                                      class="govuk-select pdk-select--justified"
                                      id="pdk-select-GENERATED_ID"
                                      name="courtRoomId"
                                    >
                                      <option
                                        value=""
                                      >
                                        Any
                                      </option>
                                      <option
                                        value="9e4932f7-97b2-3010-b942-ddd2624e4dd8"
                                      >
                                         Courtroom 01 
                                      </option>
                                    </select>
                                  </pdk-select>
                                </pdk-form-group>
                              </pdk-form-field>
                            </div>
                            <div
                              class="filter-item date-filter"
                            >
                              <pdk-form-field
                                label="Start date"
                                labeltype="small"
                              >
                                <pdk-form-group
                                  class="pdk-form-group"
                                >
                                  <label
                                    class="govuk-label govuk-label--s"
                                    for="pdk-form-control-undefined-GENERATED_ID"
                                  >
                                     Start date 
                                  </label>
                                  <pdk-date-picker-input
                                    class="ng-untouched ng-pristine ng-valid"
                                    name="startDate"
                                    required=""
                                  >
                                    <pdk-interaction-container>
                                      <div>
                                        <div
                                          style="position: relative;"
                                        >
                                          <div>
                                            <div
                                              class="pdk-date-picker-input__selection govuk-!-padding-0"
                                              pdk-padding="0"
                                            >
                                              <span
                                                hidden=""
                                                id="datePickerSelector-pdk-form-control-undefined-GENERATED_ID"
                                              >
                                                 Select to open the date picker and choose a date.
                                              </span>
                                              <input
                                                aria-describedby="datePickerSelector-pdk-form-control-undefined-GENERATED_ID"
                                                aria-expanded="false"
                                                aria-haspopup="dialog"
                                                class="pdk-date-picker-input__selection-text govuk-!-padding-right-6 ng-untouched ng-pristine ng-valid govuk-input"
                                                id="pdk-form-control-undefined-GENERATED_ID"
                                                pdk-input=""
                                                pdk-padding-right="6"
                                                readonly="true"
                                                role="button"
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </pdk-interaction-container>
                                  </pdk-date-picker-input>
                                </pdk-form-group>
                              </pdk-form-field>
                            </div>
                            <div
                              class="filter-item date-filter"
                            >
                              <pdk-form-field
                                label="End date"
                                labeltype="small"
                              >
                                <pdk-form-group
                                  class="pdk-form-group"
                                >
                                  <label
                                    class="govuk-label govuk-label--s"
                                    for="pdk-form-control-undefined-GENERATED_ID"
                                  >
                                     End date 
                                  </label>
                                  <pdk-date-picker-input
                                    class="ng-untouched ng-pristine ng-valid"
                                    data-test-id="sessionEndDate"
                                    name="endDate"
                                  >
                                    <pdk-interaction-container>
                                      <div>
                                        <div
                                          style="position: relative;"
                                        >
                                          <div>
                                            <div
                                              class="pdk-date-picker-input__selection govuk-!-padding-0"
                                              pdk-padding="0"
                                            >
                                              <span
                                                hidden=""
                                                id="datePickerSelector-pdk-form-control-undefined-GENERATED_ID"
                                              >
                                                 Select to open the date picker and choose a date.
                                              </span>
                                              <input
                                                aria-describedby="datePickerSelector-pdk-form-control-undefined-GENERATED_ID"
                                                aria-expanded="false"
                                                aria-haspopup="dialog"
                                                class="pdk-date-picker-input__selection-text govuk-!-padding-right-6 ng-untouched ng-pristine ng-valid govuk-input"
                                                id="pdk-form-control-undefined-GENERATED_ID"
                                                pdk-input=""
                                                pdk-padding-right="6"
                                                readonly="true"
                                                role="button"
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </pdk-interaction-container>
                                  </pdk-date-picker-input>
                                </pdk-form-group>
                              </pdk-form-field>
                            </div>
                            <div
                              class="filter-item"
                            >
                              <pdk-form-field
                                label="Business type (optional)"
                                labeltype="small"
                              >
                                <pdk-form-group
                                  class="pdk-form-group"
                                >
                                  <label
                                    class="govuk-label govuk-label--s"
                                    for="pdk-form-control-undefined-GENERATED_ID"
                                  >
                                     Business type (optional) 
                                  </label>
                                  <cpp-rota-business-type-select
                                    class="ng-untouched ng-pristine ng-valid"
                                    justified=""
                                    placeholder="All business types"
                                  >
                                    <pdk-select>
                                      <select
                                        class="govuk-select pdk-select--justified"
                                        id="pdk-form-control-undefined-GENERATED_ID"
                                        name="businessType"
                                      >
                                        <option
                                          value=""
                                        >
                                          All business types
                                        </option>
                                      </select>
                                    </pdk-select>
                                  </cpp-rota-business-type-select>
                                </pdk-form-group>
                              </pdk-form-field>
                            </div>
                            <div>
                              <pdk-form-field
                                label="Session"
                                labeltype="small"
                              >
                                <pdk-form-group
                                  class="pdk-form-group"
                                >
                                  <fieldset
                                    class="govuk-fieldset"
                                    pdk-fieldset=""
                                  >
                                    <legend
                                      class="govuk-fieldset__legend govuk-fieldset__legend--s"
                                    >
                                       Session 
                                    </legend>
                                    <pdk-radio-group
                                      ariadescribedby="'courtSession'"
                                      ariadescription="'Session'"
                                      class="ng-untouched ng-pristine ng-valid"
                                      name="courtSession"
                                    >
                                      <div
                                        class="govuk-radios"
                                      >
                                        <pdk-radio-button>
                                          <div
                                            class="govuk-radios__item"
                                          >
                                            <input
                                              aria-describedby="'courtSession'"
                                              class="govuk-radios__input"
                                              id="pdk-radio-GENERATED_ID"
                                              name="pdk-radio-group-GENERATED_ID"
                                              type="radio"
                                              value="Any"
                                            />
                                            <label
                                              class="govuk-radios__label govuk-label"
                                              for="pdk-radio-GENERATED_ID"
                                              pdk-label=""
                                            >
                                               Any 
                                            </label>
                                          </div>
                                        </pdk-radio-button>
                                        <pdk-radio-button>
                                          <div
                                            class="govuk-radios__item"
                                          >
                                            <input
                                              class="govuk-radios__input"
                                              id="pdk-radio-GENERATED_ID"
                                              name="pdk-radio-group-GENERATED_ID"
                                              type="radio"
                                              value="AM"
                                            />
                                            <label
                                              class="govuk-radios__label govuk-label"
                                              for="pdk-radio-GENERATED_ID"
                                              pdk-label=""
                                            >
                                               AM 
                                            </label>
                                          </div>
                                        </pdk-radio-button>
                                        <pdk-radio-button>
                                          <div
                                            class="govuk-radios__item"
                                          >
                                            <input
                                              class="govuk-radios__input"
                                              id="pdk-radio-GENERATED_ID"
                                              name="pdk-radio-group-GENERATED_ID"
                                              type="radio"
                                              value="PM"
                                            />
                                            <label
                                              class="govuk-radios__label govuk-label"
                                              for="pdk-radio-GENERATED_ID"
                                              pdk-label=""
                                            >
                                               PM 
                                            </label>
                                          </div>
                                        </pdk-radio-button>
                                        <pdk-radio-button>
                                          <div
                                            class="govuk-radios__item"
                                          >
                                            <input
                                              class="govuk-radios__input"
                                              id="pdk-radio-GENERATED_ID"
                                              name="pdk-radio-group-GENERATED_ID"
                                              type="radio"
                                              value="AD"
                                            />
                                            <label
                                              class="govuk-radios__label govuk-label"
                                              for="pdk-radio-GENERATED_ID"
                                              pdk-label=""
                                            >
                                               All day 
                                            </label>
                                          </div>
                                        </pdk-radio-button>
                                      </div>
                                    </pdk-radio-group>
                                  </fieldset>
                                </pdk-form-group>
                              </pdk-form-field>
                            </div>
                          </div>
                        </court-calendar-filter-fields>
                      </div>
                    </pdk-radio-conditional>
                  </pdk-grid>
                  <pdk-radio-button
                    value="CROWN"
                  >
                    <div
                      class="govuk-radios__item"
                    >
                      <input
                        class="govuk-radios__input"
                        id="pdk-radio-GENERATED_ID"
                        name="pdk-radio-group-GENERATED_ID"
                        type="radio"
                        value="CROWN"
                      />
                      <label
                        class="govuk-radios__label govuk-label"
                        for="pdk-radio-GENERATED_ID"
                        pdk-label=""
                      >
                        Crown Court 
                      </label>
                    </div>
                  </pdk-radio-button>
                  <pdk-grid>
                  </pdk-grid>
                </div>
              </pdk-radio-group>
            </fieldset>
          </pdk-form-group>
        </pdk-form-field>
        <div
          class="actions govuk-!-margin-bottom-2 govuk-!-padding-top-2"
          pdk-margin-bottom="2"
          pdk-padding-top="2"
        >
          <pdk-form-group
            class="pdk-form-group"
          >
            <button
              aria-label="apply filters "
              class="govuk-!-margin-bottom-0 govuk-button"
              pdk-button=""
              pdk-margin-bottom="0"
              type="submit"
            >
               Apply filters 
            </button>
          </pdk-form-group>
          <div
            class="govuk-!-margin-left-4"
            pdk-margin-left="4"
          >
            <a
              aria-label="Reset the filters"
              class="govuk-link"
              data-test-id="reset-form"
              href="javascript:void(0)"
              pdk-link=""
            >
              Reset filters
            </a>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</court-calendar-filters>
`;

exports[`CourtCalendarFiltersComponent should set the hearingType when a value is selected for CROWN COURT 1`] = `
<court-calendar-filters
  courtType={[Function String]}
  courtroomOptions={[Function Array]}
  errors={[Function OutputEmitterRef]}
  hasCrownCourt="false"
  initialValues={[Function Function]}
  jurisdictionTypeChange={[Function OutputEmitterRef]}
  organisationUnits={[Function Function]}
  submitForm={[Function OutputEmitterRef]}
>
  <div
    class="govuk-!-margin-bottom-8"
    pdk-margin-bottom="8"
  >
    <form
      class="ng-untouched ng-pristine ng-valid"
      data-test-id="searchForm"
      novalidate=""
      pdk-form=""
    >
      <fieldset
        class="filter-container"
      >
        <legend
          class="govuk-!-padding-top-4 govuk-heading-s"
          pdk-padding-top="4"
          pdk-typography="heading-small"
        >
          <h2
            class="govuk-heading-m"
            pdk-typography="heading-medium"
          >
            Filter hearings
          </h2>
        </legend>
        <pdk-form-field
          class="govuk-grid-column-full"
          label="jurisdiction"
          labeltype="none"
        >
          <pdk-form-group
            class="pdk-form-group"
          >
            <fieldset
              class="govuk-fieldset"
              pdk-fieldset=""
            >
              <legend
                class="govuk-fieldset__legend govuk-visually-hidden"
              >
                 jurisdiction 
              </legend>
              <pdk-radio-group
                class="ng-untouched ng-pristine ng-valid"
                name="courtType"
                required=""
              >
                <div
                  class="govuk-radios"
                >
                  <pdk-radio-button
                    value="MAGISTRATES"
                  >
                    <div
                      class="govuk-radios__item"
                    >
                      <input
                        class="govuk-radios__input"
                        id="pdk-radio-GENERATED_ID"
                        name="pdk-radio-group-GENERATED_ID"
                        type="radio"
                        value="MAGISTRATES"
                      />
                      <label
                        class="govuk-radios__label govuk-label"
                        for="pdk-radio-GENERATED_ID"
                        pdk-label=""
                      >
                        Magistrates' Court 
                      </label>
                    </div>
                  </pdk-radio-button>
                  <pdk-grid>
                  </pdk-grid>
                  <pdk-radio-button
                    value="CROWN"
                  >
                    <div
                      class="govuk-radios__item"
                    >
                      <input
                        class="govuk-radios__input"
                        id="pdk-radio-GENERATED_ID"
                        name="pdk-radio-group-GENERATED_ID"
                        type="radio"
                        value="CROWN"
                      />
                      <label
                        class="govuk-radios__label govuk-label"
                        for="pdk-radio-GENERATED_ID"
                        pdk-label=""
                      >
                        Crown Court 
                      </label>
                    </div>
                  </pdk-radio-button>
                  <pdk-grid>
                    <pdk-radio-conditional
                      class="govuk-!-padding-top-4"
                      pdk-padding-top="4"
                    >
                      <div
                        class="govuk-radios__conditional"
                      >
                        <court-calendar-filter-fields>
                          <div
                            class="filter-group filter-group-extended"
                          >
                            <div
                              class="filter-item"
                            >
                              <pdk-form-field
                                label="Court"
                                labeltype="small"
                              >
                                <pdk-form-group
                                  class="pdk-form-group"
                                >
                                  <label
                                    class="govuk-label govuk-label--s"
                                    for="courtCentreFilter"
                                  >
                                     Court 
                                  </label>
                                  <cpp-organisation-unit-autosuggest
                                    class="ng-untouched ng-pristine ng-valid"
                                    data-role="allocate-court-centre-input"
                                    name="courtCentre"
                                    required=""
                                  >
                                    <pdk-autosuggest-lite>
                                      <pdk-autosuggest
                                        highlightcolor="blue"
                                      >
                                        <pdk-interaction-container>
                                          <div>
                                            <div
                                              class="pdk-autosuggest"
                                            >
                                              <input
                                                aria-autocomplete="list"
                                                aria-controls="pdk-autosuggest__suggestions-container-GENERATED_ID-listbox"
                                                aria-describedby="pdk-autosuggest__instructions-GENERATED_ID"
                                                aria-expanded="false"
                                                autocomplete="off"
                                                class="pdk-autosuggest__input ng-untouched ng-pristine ng-valid govuk-input"
                                                id="courtCentreFilter"
                                                role="combobox"
                                                type="text"
                                              />
                                              <span
                                                class="govuk-visually-hidden"
                                                id="pdk-autosuggest__instructions-GENERATED_ID"
                                                pdk-visually-hidden=""
                                              >
                                                 When autocomplete results are available, use the up and down arrows to review and Enter to select. Touch device users, explore options with swipe gestures. 
                                              </span>
                                              <span
                                                aria-live="polite"
                                                class="govuk-visually-hidden"
                                                pdk-visually-hidden=""
                                                role="status"
                                              >
                                              </span>
                                              <div
                                                class="pdk-autosuggest__suggestions-container"
                                                id="pdk-autosuggest__suggestions-container-GENERATED_ID"
                                              >
                                              </div>
                                            </div>
                                          </div>
                                        </pdk-interaction-container>
                                      </pdk-autosuggest>
                                    </pdk-autosuggest-lite>
                                  </cpp-organisation-unit-autosuggest>
                                </pdk-form-group>
                              </pdk-form-field>
                            </div>
                            <div
                              class="filter-item"
                            >
                              <pdk-form-field
                                label="Courtroom (optional)"
                                labeltype="small"
                              >
                                <pdk-form-group
                                  class="pdk-form-group"
                                >
                                  <label
                                    class="govuk-label govuk-label--s"
                                    for="pdk-select-GENERATED_ID"
                                  >
                                     Courtroom (optional) 
                                  </label>
                                  <pdk-select
                                    class="ng-untouched ng-pristine ng-valid"
                                    justified=""
                                    placeholder="Any"
                                  >
                                    <select
                                      class="govuk-select pdk-select--justified"
                                      id="pdk-select-GENERATED_ID"
                                      name="courtRoomId"
                                    >
                                      <option
                                        value=""
                                      >
                                        Any
                                      </option>
                                    </select>
                                  </pdk-select>
                                </pdk-form-group>
                              </pdk-form-field>
                            </div>
                            <div
                              class="filter-item date-filter"
                            >
                              <pdk-form-field
                                label="Start date"
                                labeltype="small"
                              >
                                <pdk-form-group
                                  class="pdk-form-group"
                                >
                                  <label
                                    class="govuk-label govuk-label--s"
                                    for="pdk-form-control-undefined-GENERATED_ID"
                                  >
                                     Start date 
                                  </label>
                                  <pdk-date-picker-input
                                    class="ng-untouched ng-pristine ng-valid"
                                    name="startDate"
                                    required=""
                                  >
                                    <pdk-interaction-container>
                                      <div>
                                        <div
                                          style="position: relative;"
                                        >
                                          <div>
                                            <div
                                              class="pdk-date-picker-input__selection govuk-!-padding-0"
                                              pdk-padding="0"
                                            >
                                              <span
                                                hidden=""
                                                id="datePickerSelector-pdk-form-control-undefined-GENERATED_ID"
                                              >
                                                 Select to open the date picker and choose a date.
                                              </span>
                                              <input
                                                aria-describedby="datePickerSelector-pdk-form-control-undefined-GENERATED_ID"
                                                aria-expanded="false"
                                                aria-haspopup="dialog"
                                                class="pdk-date-picker-input__selection-text govuk-!-padding-right-6 ng-untouched ng-pristine ng-valid govuk-input"
                                                id="pdk-form-control-undefined-GENERATED_ID"
                                                pdk-input=""
                                                pdk-padding-right="6"
                                                readonly="true"
                                                role="button"
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </pdk-interaction-container>
                                  </pdk-date-picker-input>
                                </pdk-form-group>
                              </pdk-form-field>
                            </div>
                            <div
                              class="filter-item date-filter"
                            >
                              <pdk-form-field
                                label="End date"
                                labeltype="small"
                              >
                                <pdk-form-group
                                  class="pdk-form-group"
                                >
                                  <label
                                    class="govuk-label govuk-label--s"
                                    for="pdk-form-control-undefined-GENERATED_ID"
                                  >
                                     End date 
                                  </label>
                                  <pdk-date-picker-input
                                    class="ng-untouched ng-pristine ng-valid"
                                    data-test-id="sessionEndDate"
                                    name="endDate"
                                  >
                                    <pdk-interaction-container>
                                      <div>
                                        <div
                                          style="position: relative;"
                                        >
                                          <div>
                                            <div
                                              class="pdk-date-picker-input__selection govuk-!-padding-0"
                                              pdk-padding="0"
                                            >
                                              <span
                                                hidden=""
                                                id="datePickerSelector-pdk-form-control-undefined-GENERATED_ID"
                                              >
                                                 Select to open the date picker and choose a date.
                                              </span>
                                              <input
                                                aria-describedby="datePickerSelector-pdk-form-control-undefined-GENERATED_ID"
                                                aria-expanded="false"
                                                aria-haspopup="dialog"
                                                class="pdk-date-picker-input__selection-text govuk-!-padding-right-6 ng-untouched ng-pristine ng-valid govuk-input"
                                                id="pdk-form-control-undefined-GENERATED_ID"
                                                pdk-input=""
                                                pdk-padding-right="6"
                                                readonly="true"
                                                role="button"
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </pdk-interaction-container>
                                  </pdk-date-picker-input>
                                </pdk-form-group>
                              </pdk-form-field>
                            </div>
                            <div
                              class="filter-item"
                            >
                              <pdk-form-field
                                label="Hearing type (optional)"
                                labeltype="small"
                              >
                                <pdk-form-group
                                  class="pdk-form-group"
                                >
                                  <label
                                    class="govuk-label govuk-label--s"
                                    for="pdk-form-control-undefined-GENERATED_ID"
                                  >
                                     Hearing type (optional) 
                                  </label>
                                  <cpp-hearing-type-autosuggest
                                    class="ng-untouched ng-pristine ng-valid"
                                    name="hearingType"
                                    placeholder="All hearing types"
                                  >
                                    <pdk-autosuggest-lite>
                                      <pdk-autosuggest
                                        highlightcolor="blue"
                                      >
                                        <pdk-interaction-container>
                                          <div>
                                            <div
                                              class="pdk-autosuggest"
                                            >
                                              <input
                                                aria-autocomplete="list"
                                                aria-controls="pdk-autosuggest__suggestions-container-GENERATED_ID-listbox"
                                                aria-describedby="pdk-autosuggest__instructions-GENERATED_ID"
                                                aria-expanded="false"
                                                autocomplete="off"
                                                class="pdk-autosuggest__input ng-untouched ng-pristine ng-valid govuk-input"
                                                id="pdk-form-control-undefined-GENERATED_ID"
                                                role="combobox"
                                                type="text"
                                              />
                                              <span
                                                class="govuk-visually-hidden"
                                                id="pdk-autosuggest__instructions-GENERATED_ID"
                                                pdk-visually-hidden=""
                                              >
                                                 When autocomplete results are available, use the up and down arrows to review and Enter to select. Touch device users, explore options with swipe gestures. 
                                              </span>
                                              <span
                                                aria-live="polite"
                                                class="govuk-visually-hidden"
                                                pdk-visually-hidden=""
                                                role="status"
                                              >
                                              </span>
                                              <div
                                                class="pdk-autosuggest__suggestions-container"
                                                id="pdk-autosuggest__suggestions-container-GENERATED_ID"
                                              >
                                              </div>
                                            </div>
                                          </div>
                                        </pdk-interaction-container>
                                      </pdk-autosuggest>
                                    </pdk-autosuggest-lite>
                                  </cpp-hearing-type-autosuggest>
                                </pdk-form-group>
                              </pdk-form-field>
                            </div>
                            <div
                              class="filter-item"
                            >
                              <pdk-form-field
                                label="Business type (optional)"
                                labeltype="small"
                              >
                                <pdk-form-group
                                  class="pdk-form-group"
                                >
                                  <label
                                    class="govuk-label govuk-label--s"
                                    for="pdk-form-control-undefined-GENERATED_ID"
                                  >
                                     Business type (optional) 
                                  </label>
                                  <cpp-rota-business-type-select
                                    class="ng-untouched ng-pristine ng-valid"
                                    justified=""
                                    placeholder="All business types"
                                  >
                                    <pdk-select>
                                      <select
                                        class="govuk-select pdk-select--justified"
                                        id="pdk-form-control-undefined-GENERATED_ID"
                                        name="businessType"
                                      >
                                        <option
                                          value=""
                                        >
                                          All business types
                                        </option>
                                      </select>
                                    </pdk-select>
                                  </cpp-rota-business-type-select>
                                </pdk-form-group>
                              </pdk-form-field>
                            </div>
                            <div>
                              <pdk-form-field
                                label="Session"
                                labeltype="small"
                              >
                                <pdk-form-group
                                  class="pdk-form-group"
                                >
                                  <fieldset
                                    class="govuk-fieldset"
                                    pdk-fieldset=""
                                  >
                                    <legend
                                      class="govuk-fieldset__legend govuk-fieldset__legend--s"
                                    >
                                       Session 
                                    </legend>
                                    <pdk-radio-group
                                      ariadescribedby="'courtSession'"
                                      ariadescription="'Session'"
                                      class="ng-untouched ng-pristine ng-valid"
                                      name="courtSession"
                                    >
                                      <div
                                        class="govuk-radios"
                                      >
                                        <pdk-radio-button>
                                          <div
                                            class="govuk-radios__item"
                                          >
                                            <input
                                              aria-describedby="'courtSession'"
                                              class="govuk-radios__input"
                                              id="pdk-radio-GENERATED_ID"
                                              name="pdk-radio-group-GENERATED_ID"
                                              type="radio"
                                              value="Any"
                                            />
                                            <label
                                              class="govuk-radios__label govuk-label"
                                              for="pdk-radio-GENERATED_ID"
                                              pdk-label=""
                                            >
                                               Any 
                                            </label>
                                          </div>
                                        </pdk-radio-button>
                                        <pdk-radio-button>
                                          <div
                                            class="govuk-radios__item"
                                          >
                                            <input
                                              class="govuk-radios__input"
                                              id="pdk-radio-GENERATED_ID"
                                              name="pdk-radio-group-GENERATED_ID"
                                              type="radio"
                                              value="AM"
                                            />
                                            <label
                                              class="govuk-radios__label govuk-label"
                                              for="pdk-radio-GENERATED_ID"
                                              pdk-label=""
                                            >
                                               AM 
                                            </label>
                                          </div>
                                        </pdk-radio-button>
                                        <pdk-radio-button>
                                          <div
                                            class="govuk-radios__item"
                                          >
                                            <input
                                              class="govuk-radios__input"
                                              id="pdk-radio-GENERATED_ID"
                                              name="pdk-radio-group-GENERATED_ID"
                                              type="radio"
                                              value="PM"
                                            />
                                            <label
                                              class="govuk-radios__label govuk-label"
                                              for="pdk-radio-GENERATED_ID"
                                              pdk-label=""
                                            >
                                               PM 
                                            </label>
                                          </div>
                                        </pdk-radio-button>
                                        <pdk-radio-button>
                                          <div
                                            class="govuk-radios__item"
                                          >
                                            <input
                                              class="govuk-radios__input"
                                              id="pdk-radio-GENERATED_ID"
                                              name="pdk-radio-group-GENERATED_ID"
                                              type="radio"
                                              value="AD"
                                            />
                                            <label
                                              class="govuk-radios__label govuk-label"
                                              for="pdk-radio-GENERATED_ID"
                                              pdk-label=""
                                            >
                                               All day 
                                            </label>
                                          </div>
                                        </pdk-radio-button>
                                      </div>
                                    </pdk-radio-group>
                                  </fieldset>
                                </pdk-form-group>
                              </pdk-form-field>
                            </div>
                          </div>
                        </court-calendar-filter-fields>
                      </div>
                    </pdk-radio-conditional>
                  </pdk-grid>
                </div>
              </pdk-radio-group>
            </fieldset>
          </pdk-form-group>
        </pdk-form-field>
        <div
          class="actions govuk-!-margin-bottom-2 govuk-!-padding-top-2"
          pdk-margin-bottom="2"
          pdk-padding-top="2"
        >
          <pdk-form-group
            class="pdk-form-group"
          >
            <button
              aria-label="apply filters "
              class="govuk-!-margin-bottom-0 govuk-button"
              pdk-button=""
              pdk-margin-bottom="0"
              type="submit"
            >
               Apply filters 
            </button>
          </pdk-form-group>
          <div
            class="govuk-!-margin-left-4"
            pdk-margin-left="4"
          >
            <a
              aria-label="Reset the filters"
              class="govuk-link"
              data-test-id="reset-form"
              href="javascript:void(0)"
              pdk-link=""
            >
              Reset filters
            </a>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</court-calendar-filters>
`;
